# react-native-b4a

./: README.md  index.js  package.json  react-native-b4a.podspec  react-native.config.js
.github/workflows/: test.yml
android/: CMakeLists.txt  build.gradle
android/src/main/java/to/holepunch/b4a/: BufferForArrayPackage.java
ios/: BufferForArrayModuleProvider.h  BufferForArrayModuleProvider.mm
lib/: base64.h  base64.js  hex.h  hex.js  utf.h  utf16le.js  utf8.js
shared/: BufferForArrayModule.cc  BufferForArrayModule.h
specs/: NativeBufferForArray.ts
